--- a/templates/websites.html
+++ b/templates/websites.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container mt-5">
         <h1>Scraped Websites</h1>
+        <a href="{{ url_for('scrape_websites') }}" class="btn btn-primary mb-3">Scrape New Websites</a>
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -18,6 +19,7 @@
                     <th>Author Name</th>
                     <th>Author Email</th>
                     <th>Status</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,6 +31,11 @@
                     <td>{{ website.author_name if website.author_name else 'N/A' }}</td>
                     <td>{{ website.author_email if website.author_email else 'N/A' }}</td>
                     <td>{{ website.status }}</td>
+                    <td>
+                        {% if website.status == 'email_found' %}
+                            <a href="{{ url_for('start_outreach', website_id=website.id) }}" class="btn btn-primary btn-sm">Start Outreach</a>
+                        {% endif %}
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
