--- a/templates/websites.html
+++ b/templates/websites.html
@@ -1,45 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scraped Websites</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1>Scraped Websites</h1>
-        <a href="{{ url_for('scrape_websites') }}" class="btn btn-primary mb-3">Scrape New Websites</a>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>URL</th>
-                    <th>Domain Authority</th>
-                    <th>Author Name</th>
-                    <th>Author Email</th>
-                    <th>Status</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for website in websites %}
-                <tr>
-                    <td>{{ website.id }}</td>
-                    <td>{{ website.url }}</td>
-                    <td>{{ website.domain_authority if website.domain_authority is not none else 'N/A' }}</td>
-                    <td>{{ website.author_name if website.author_name else 'N/A' }}</td>
-                    <td>{{ website.author_email if website.author_email else 'N/A' }}</td>
-                    <td>{{ website.status }}</td>
-                    <td>
-                        {% if website.status == 'email_found' %}
-                            <a href="{{ url_for('start_outreach', website_id=website.id) }}" class="btn btn-primary btn-sm">Start Outreach</a>
-                        {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Scraped Websites{% endblock %}
+
+{% block content %}
+<h1>Scraped Websites</h1>
+<a href="{{ url_for('scrape_websites') }}" class="btn btn-primary mb-3">Scrape New Websites</a>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>URL</th>
+            <th>Domain Authority</th>
+            <th>Author Name</th>
+            <th>Author Email</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for website in websites %}
+        <tr>
+            <td>{{ website.id }}</td>
+            <td>{{ website.url }}</td>
+            <td>{{ website.domain_authority if website.domain_authority is not none else 'N/A' }}</td>
+            <td>{{ website.author_name if website.author_name else 'N/A' }}</td>
+            <td>{{ website.author_email if website.author_email else 'N/A' }}</td>
+            <td>{{ website.status }}</td>
+            <td>
+                {% if website.status == 'email_found' %}
+                    <a href="{{ url_for('start_outreach', website_id=website.id) }}" class="btn btn-primary btn-sm">Start Outreach</a>
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+{% endblock %}
