--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,50 +4,35 @@
 
 {% block content %}
 <h1>Welcome, {{ user.name }}!</h1>
-<p>Company: {{ user.company }}</p>
+<a href="{{ url_for('new_campaign') }}" class="btn btn-success mb-3">Create New Campaign</a>
 
 <h2>Your Campaigns</h2>
 {% if user.campaigns %}
-    {% for campaign in user.campaigns %}
-        <h3>Campaign: {{ campaign.target_url }}</h3>
-        <p>Status: {{ campaign.status }}</p>
-        <p>Created: {{ campaign.created_date }}</p>
-        
-        <h4>Outreach Attempts</h4>
-        {% if campaign.websites %}
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>Website</th>
-                        <th>Status</th>
-                        <th>Author</th>
-                        <th>Email</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for website in campaign.websites %}
-                    <tr>
-                        <td>{{ website.url }}</td>
-                        <td>{{ website.status }}</td>
-                        <td>{{ website.author_name }}</td>
-                        <td>{{ website.author_email }}</td>
-                        <td>
-                            {% if website.status == 'email_found' %}
-                                <a href="{{ url_for('start_outreach', website_id=website.id, campaign_id=campaign.id) }}" class="btn btn-primary btn-sm">Start Outreach</a>
-                            {% endif %}
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        {% else %}
-            <p>No outreach attempts yet. Website analysis may still be in progress.</p>
-        {% endif %}
-    {% endfor %}
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Target URL</th>
+                <th>Keyword</th>
+                <th>Status</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for campaign in user.campaigns %}
+            <tr>
+                <td>{{ campaign.name }}</td>
+                <td>{{ campaign.target_url }}</td>
+                <td>{{ campaign.keyword }}</td>
+                <td>{{ campaign.status }}</td>
+                <td>
+                    <a href="{{ url_for('campaign_details', campaign_id=campaign.id) }}" class="btn btn-sm btn-primary">View Details</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% else %}
-    <p>You haven't created any campaigns yet. Click "Start New Campaign" to begin!</p>
+    <p>You haven't created any campaigns yet. Click "Create New Campaign" to begin!</p>
 {% endif %}
-
-<a href="{{ url_for('new_campaign') }}" class="btn btn-success mt-3">Start New Campaign</a>
 {% endblock %}
