--- a/templates/new_campaign.html
+++ b/templates/new_campaign.html
@@ -6,8 +6,16 @@
 <h1>Start New Campaign</h1>
 <form method="POST">
     <div class="form-group">
+        <label for="name">Campaign Name</label>
+        <input type="text" class="form-control" id="name" name="name" required>
+    </div>
+    <div class="form-group">
         <label for="target_url">Target URL for Backlinks</label>
         <input type="url" class="form-control" id="target_url" name="target_url" required>
+    </div>
+    <div class="form-group">
+        <label for="keyword">Target Keyword</label>
+        <input type="text" class="form-control" id="keyword" name="keyword" required>
     </div>
     <button type="submit" class="btn btn-primary">Create Campaign</button>
 </form>
