--- a/templates/new_campaign.html
+++ b/templates/new_campaign.html
@@ -4,19 +4,63 @@
 
 {% block content %}
 <h1>Start New Campaign</h1>
-<form method="POST">
-    <div class="form-group">
-        <label for="name">Campaign Name</label>
-        <input type="text" class="form-control" id="name" name="name" required>
+<ul class="nav nav-tabs" id="campaignTabs" role="tablist">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="seo-tab" data-bs-toggle="tab" data-bs-target="#seo" type="button" role="tab" aria-controls="seo" aria-selected="true">SEO</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="pr-tab" data-bs-toggle="tab" data-bs-target="#pr" type="button" role="tab" aria-controls="pr" aria-selected="false">PR</button>
+    </li>
+</ul>
+<div class="tab-content" id="campaignTabsContent">
+    <div class="tab-pane fade show active" id="seo" role="tabpanel" aria-labelledby="seo-tab">
+        <form method="POST" action="{{ url_for('new_campaign', campaign_type='seo') }}">
+            <div class="form-group">
+                <label for="seo_name">Campaign Name</label>
+                <input type="text" class="form-control" id="seo_name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="target_url">Target URL for Backlinks</label>
+                <input type="url" class="form-control" id="target_url" name="target_url" required>
+            </div>
+            <div class="form-group">
+                <label for="seo_keyword">Target Keyword</label>
+                <input type="text" class="form-control" id="seo_keyword" name="keyword" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Create SEO Campaign</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="target_url">Target URL for Backlinks</label>
-        <input type="url" class="form-control" id="target_url" name="target_url" required>
+    <div class="tab-pane fade" id="pr" role="tabpanel" aria-labelledby="pr-tab">
+        <form method="POST" action="{{ url_for('new_campaign', campaign_type='pr') }}">
+            <div class="form-group">
+                <label for="pr_name">Campaign Name</label>
+                <input type="text" class="form-control" id="pr_name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="press_release">Press Release (paste the content of your press release)</label>
+                <textarea class="form-control" id="press_release" name="press_release" rows="10" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="pr_topic">Target Topic</label>
+                <input type="text" class="form-control" id="pr_topic" name="topic" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Create PR Campaign</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="keyword">Target Keyword</label>
-        <input type="text" class="form-control" id="keyword" name="keyword" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Create Campaign</button>
-</form>
+</div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var triggerTabList = [].slice.call(document.querySelectorAll('#campaignTabs button'))
+        triggerTabList.forEach(function (triggerEl) {
+            var tabTrigger = new bootstrap.Tab(triggerEl)
+            triggerEl.addEventListener('click', function (event) {
+                event.preventDefault()
+                tabTrigger.show()
+            })
+        })
+    });
+</script>
 {% endblock %}
