--- a/templates/new_campaign.html
+++ b/templates/new_campaign.html
@@ -14,37 +14,43 @@
 </ul>
 <div class="tab-content" id="campaignTabsContent">
     <div class="tab-pane fade show active" id="seo" role="tabpanel" aria-labelledby="seo-tab">
-        <form method="POST" action="{{ url_for('new_campaign', campaign_type='seo') }}">
+        <form method="POST" action="{{ url_for('new_campaign') }}">
             <div class="form-group">
-                <label for="seo_name">Campaign Name</label>
-                <input type="text" class="form-control" id="seo_name" name="name" required>
+                <label for="campaign_name">Campaign Name</label>
+                <input type="text" class="form-control" id="campaign_name" name="campaign_name" required>
             </div>
             <div class="form-group">
-                <label for="target_url">Target URL for Backlinks</label>
-                <input type="url" class="form-control" id="target_url" name="target_url" required>
+                <label for="campaign_type">Campaign Type</label>
+                <select class="form-control" id="campaign_type" name="campaign_type" required>
+                    <option value="seo">SEO</option>
+                    <option value="pr">PR</option>
+                </select>
             </div>
             <div class="form-group">
-                <label for="seo_keyword">Target Keyword</label>
-                <input type="text" class="form-control" id="seo_keyword" name="keyword" required>
+                <label for="keyword">Keyword</label>
+                <input type="text" class="form-control" id="keyword" name="keyword" required>
             </div>
-            <button type="submit" class="btn btn-primary">Create SEO Campaign</button>
+            <button type="submit" class="btn btn-primary">Create Campaign</button>
         </form>
     </div>
     <div class="tab-pane fade" id="pr" role="tabpanel" aria-labelledby="pr-tab">
-        <form method="POST" action="{{ url_for('new_campaign', campaign_type='pr') }}">
+        <form method="POST" action="{{ url_for('new_campaign') }}">
             <div class="form-group">
-                <label for="pr_name">Campaign Name</label>
-                <input type="text" class="form-control" id="pr_name" name="name" required>
+                <label for="campaign_name">Campaign Name</label>
+                <input type="text" class="form-control" id="campaign_name" name="campaign_name" required>
             </div>
             <div class="form-group">
-                <label for="press_release">Press Release (paste the content of your press release)</label>
-                <textarea class="form-control" id="press_release" name="press_release" rows="10" required></textarea>
+                <label for="campaign_type">Campaign Type</label>
+                <select class="form-control" id="campaign_type" name="campaign_type" required>
+                    <option value="seo">SEO</option>
+                    <option value="pr">PR</option>
+                </select>
             </div>
             <div class="form-group">
-                <label for="pr_topic">Target Topic</label>
-                <input type="text" class="form-control" id="pr_topic" name="topic" required>
+                <label for="keyword">Keyword</label>
+                <input type="text" class="form-control" id="keyword" name="keyword" required>
             </div>
-            <button type="submit" class="btn btn-primary">Create PR Campaign</button>
+            <button type="submit" class="btn btn-primary">Create Campaign</button>
         </form>
     </div>
 </div>
